<resources>
    <string name="app_name">DomotiTelnet</string>
    <string name="pagina_principal">Pagina principal</string>
    <string name="persianas">Persianas</string>
    <string name="toldo">Toldo</string>
    <string name="persianas_dormitorio">Persianas dormitorio</string>
    <string name="toldo_salon">Toldo Salon</string>
    <string name="salir_aplicacion">Salir de la aplicacion</string>
    <string name="subir_i">Subir persiana izquierda</string>
    <string name="bajar_i">Bajar persiana izquierda</string>
    <string name="subir_d">Subir persiana derecha</string>
    <string name="bajar_d">Bajar persiana derecha</string>
    <string name="subir_toldo">Subir el toldo</string>
    <string name="parar_toldo">Parar el toldo</string>
    <string name="bajar_toldo">Bajar el toldo</string>
    <string name="salir">salir</string>
</resources>