<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mariano.domotitelnet.PersianasDormitorioActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_persianas"
        android:text="@string/persianas"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_large"
        android:textColor="@color/light_blue"
        android:paddingBottom="16dip" />
    <Button
        android:id="@+id/subir_izquierda"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:layout_below="@id/titulo_persianas" android:textSize="@dimen/font_small"
        android:text="@string/subir_i" />
    <Button
        android:id="@+id/bajar_izquierda"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:textSize="@dimen/font_small"
        android:text="@string/bajar_i"
        android:layout_below="@id/subir_izquierda" />
    <Button
        android:id="@+id/subir_derecha"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/titulo_persianas"
        android:textSize="@dimen/font_small"
        android:text="@string/subir_d" />
    <Button
        android:id="@+id/bajar_derecha"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/font_small" android:text="@string/bajar_d"
        android:layout_below="@id/subir_derecha" />
    <Button
        android:id="@+id/salir"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font_small"
        android:text="@string/salir"
        android:layout_alignParentBottom="true"
        android:onClick="paginaPrincipal" />

</RelativeLayout>

