<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mariano.domotitelnet.ToldoSalonActivity">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo_toldo"
            android:text="@string/toldo"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_large"
            android:textColor="@color/light_blue"
            android:paddingBottom="16dip"
            />
        <Button
            android:id="@+id/subir_toldo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_below="@id/titulo_toldo"
            android:textSize="@dimen/font_small"
            android:text="@string/subir_toldo"
            />
        <Button
            android:id="@+id/parar_toldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/subir_toldo"
            android:layout_margin="20dp"
            android:textSize="@dimen/font_small"
            android:text="@string/parar_toldo"
            />
        <Button
            android:id="@+id/bajar_toldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/parar_toldo"
            android:layout_margin="20dp"
            android:textSize="@dimen/font_small"
            android:text="@string/bajar_toldo"
            />
        <Button
            android:id="@+id/salir"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_small"
            android:text="@string/salir"
            android:layout_alignParentBottom="true"
            android:onClick="paginaPrincipal2"
            />

</RelativeLayout>