<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mariano.domotitelnet.MainActivity"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<TextView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pagina_principal"
    android:text="@string/pagina_principal"
    android:gravity="center_horizontal"
    android:textSize="@dimen/font_large"
    android:textColor="@color/light_blue"
    android:paddingBottom="16dip"
    />

    <Button
        android:id="@+id/titulo_persianas_dormitorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_below="@id/pagina_principal"
        android:onClick="startPersianas"
        android:text="@string/persianas_dormitorio"
        android:textSize="@dimen/font_medium_small" />

    <Button
        android:id="@+id/titulo_toldo_salon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo_persianas_dormitorio"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:onClick="startToldo"
        android:text="@string/toldo_salon"
        android:textSize="@dimen/font_medium_small" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="acabar"
        android:text="Salir de la aplicacion" />

    </RelativeLayout>